<resources>
    <string name="facebook_app_id">233886120423294</string>
    <string name="fb_login_protocol_scheme">fb233886120423294</string>

    <string name="app_name">1Step</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_one_required">At least one field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_try_later">Unexpected error, try later</string>
    <string name="error_facebook_login">Facebook login error, try later.</string>
    <string name="action_facebook_sign_in">Facebook</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="forgot_password_reset_it">Forgot your password? Reset it.</string>
    <string name="action_organization_sign_up">Organization?</string>
    <string name="error_password_match">Password do not match</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="action_toggle_to_volunteer">Create Volunteer Account</string>
    <string name="action_toggle_to_organization">Create Organization Account</string>
    <string name="title_create_organization">Create Organization</string>
    <string name="title_create_volunteer">Create Volunteer</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_username">Invalid username!</string>
    <string name="prompt_organization_name">Organization Name</string>
    <string name="prompt_phone">Contact Phone</string>
    <string name="error_invalid_phone">Phone invalid.</string>
    <string name="title_activity_completion">Complete Profile</string>
    <string name="action_save">Save</string>
    <string name="about">About</string>
    <string name="occupation">Occupation</string>
    <string name="mission">Mission</string>
    <string name="site">Site</string>
    <string name="title_activity_items_selection">Selection</string>
    <string name="action_next">Next</string>
    <string name="title_activity_edit_opportunity">Create Opportunity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="volunteers_number">Volunteers Number</string>
    <string name="time_commitment">Time Commitment</string>
    <string name="others_requirements">Others Requirements</string>
    <string name="tags">Tags</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_google_places">GooglePlacesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="location">Location</string>
    <string name="virtual">Virtual</string>
    <string name="dated">Dated</string>
    <string name="ongoing">Ongoing</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="causes">Causes</string>
    <string name="skills">Skills</string>
    <string name="error_end_before_start">End date must be after the start</string>
    <string name="title_search">Search</string>
    <string name="title_do">Do</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_share">Share</string>
    <string name="title_profile">Profile</string>
    <string name="action_more">More</string>
    <string name="title_activity_opportunity_detail">OpportunityDetail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_opportunity">Opportunity</string>
    <string name="gallery">Gallery</string>
    <string name="established_at">Established At</string>
    <string name="cnpj">CNPJ</string>
    <string name="title_activity_organization">Organization</string>
    <string name="title_activity_volunteer">Volunteer</string>
    <string name="size">Size</string>
    <string name="gender">Gender</string>
    <string name="birth_at">Birth At</string>
    <string name="title_activity_edit_user">Edit Profile</string>
    <string name="images">Images</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contacts">Contacts</string>
    <string name="action_options">Options</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="mock_password">*********</string>
    <string name="want_to_be_a_volunteer_sign_up">Want to be a <b>Volunteer?</b> Sign up.</string>
    <string name="i_want_my_organization_here">I want my <b>Organization</b> here!</string>
    <string name="my_profile">My Profile</string>
    <string name="saving_progress">Saving…</string>
    <string name="loading_progress">Loading…</string>
    <string name="title_create_opportunity">Create Opportunity</string>
    <string name="title_explore">Explore</string>
    <string name="title_my_opportunties">My Opportunities</string>
    <string name="delete">Delete</string>

</resources>
