<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_explore"/>

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_create_opportunity"/>

    <item
        android:id="@+id/navigation_opportunities"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_my_opportunties"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"/>

</menu>
