<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lutzed.servoluntario.opportunities.OpportunityFragment"
    tools:showIn="@layout/activity_opportunity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"/>

        <com.lutzed.servoluntario.util.DataView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primary_icon="@drawable/ic_date_range_black_24dp"
            app:title="@string/time"/>

        <com.lutzed.servoluntario.util.DataView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primary_icon="@drawable/ic_place_black_24dp"
            app:title="@string/location"/>

        <com.lutzed.servoluntario.util.DataView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primary_icon="@drawable/ic_perm_contact_calendar_black_24dp"
            app:title="@string/contact"/>

        <TextView
            android:id="@+id/galleryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="52dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/gallery"
            android:textColor="@color/secondaryText"
            android:textSize="18sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/imagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/causesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="52dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/causes"
            android:textColor="@color/secondaryText"
            android:textSize="18sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/causesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/skillsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="52dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/skills"
            android:textColor="@color/secondaryText"
            android:textSize="18sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/skillsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>

        <com.lutzed.servoluntario.util.DataView
            android:id="@+id/volunteersNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primary_icon="@drawable/ic_perm_contact_calendar_black_24dp"
            app:title="@string/volunteers_number"/>

        <com.lutzed.servoluntario.util.DataView
            android:id="@+id/timeCommitment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primary_icon="@drawable/ic_perm_contact_calendar_black_24dp"
            app:title="@string/time_commitment"/>

        <com.lutzed.servoluntario.util.DataView
            android:id="@+id/othersRequirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primary_icon="@drawable/ic_perm_contact_calendar_black_24dp"
            app:title="@string/others_requirements"/>

        <com.lutzed.servoluntario.util.DataView
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:primary_icon="@drawable/ic_perm_contact_calendar_black_24dp"
            app:title="@string/tags"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
