<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ls="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.lutzed.servoluntario.signup.SignUpActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/edit_user_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/aboutInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/about"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="4"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/causesWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/causes"/>

                <TextView
                    android:id="@+id/causesError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/causesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/skillsWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"/>

                <TextView
                    android:id="@+id/skillsError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/skillsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sizeInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/size"
                    android:inputType="number"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cnpjInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cnpj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cnpj"
                    android:inputType="number"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/missionInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mission"
                    android:inputType="text"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/occupationInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/occupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/occupation"
                    android:inputType="text"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/imagesWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/images"/>

                <TextView
                    android:id="@+id/imagesError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/imagesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>

            <RadioGroup
                android:id="@+id/genderTypeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/gemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"/>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/contactsWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts"/>

                <TextView
                    android:id="@+id/contactsError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/siteInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/site"
                    android:inputType="text"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/locationInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthAtInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/birthAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_at"
                    android:inputType="date"
                    android:maxLines="1"
                    android:text="@string/date"
                    android:textColor="@color/tertiaryText"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/establishedAtInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/establishedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_at"
                    android:inputType="date"
                    android:maxLines="1"
                    android:text="@string/date"
                    android:textColor="@color/tertiaryText"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
